[package]
name = "mqtt-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
mqttrs = "0.4"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["codec"] }
