[package]
name = "mqttrs-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
clap = { version = "4.1.11", features = ["cargo", "string"]}
futures = "0.3"
lazy_static = "1.4.0"
log = "0.4.20"
mqttrs = "0.4"
rand = "0.8.5"
simplelog = "0.12.1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
